objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Address_Diff__c</fullName>
        <formula>LastModifiedDate - Address_Changed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Address Diff</label>
        <precision>18</precision>
        <scale>18</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Assignment_Log__c</fullName>
        <description>Link to BO report to view the account assignment log for the past 20 days</description>
        <formula>HYPERLINK( $Setup.General_Settings__c.Account_Assignment_Log_Report__c  &amp;  CDS_Account_Id__c ,&quot; View Account Assignment Log&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>BO Report to view account assignment activities for the past 20 days</inlineHelpText>
        <label>Account Assignment Log</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_City_Latin__c</fullName>
        <label>City (Latin)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_County_Latin__c</fullName>
        <label>County (Latin)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_Changed_Date__c</fullName>
        <description>The date when account name or account latin name has been changed</description>
        <inlineHelpText>Date when account name or Latin name was changed</inlineHelpText>
        <label>Account Name Changed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_Name_Latin__c</fullName>
        <description>Latin Account Name</description>
        <label>Account Name (Latin)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Prior_Territory_Changed_Date__c</fullName>
        <description>The date/time when the account prior owner was changed. Excluded system users like MW Integration, SFDC Admn,Informatica, Data Loader</description>
        <inlineHelpText>The date/time when the account prior owner was changed</inlineHelpText>
        <label>Account Prior Territory Changed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_Prior_Territory__c</fullName>
        <description>When account owner has been changed, saved the prior owner id . The field is used by DW for reports</description>
        <inlineHelpText>Prior Account Owner</inlineHelpText>
        <label>Account Prior Territory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Sector_Code__c</fullName>
        <description>Account Sector Abreviation will be used to calculate Account Location</description>
        <formula>IF( ISPICKVAL( Account_Sector__c , &apos;Commercial&apos;) ,&apos;COM&apos;, IF(ISPICKVAL( Account_Sector__c , &apos;Government&apos;) ,&apos;GOV&apos;,&apos;EDU&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Sector Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Sector__c</fullName>
        <label>Account Sector</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_State_Province_Latin__c</fullName>
        <label>State/Province (Latin)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Junk</fullName>
                </value>
                <value>
                    <fullName>Unvalidated</fullName>
                </value>
                <value>
                    <fullName>Out of Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Street_Latin__c</fullName>
        <label>Street (Latin)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Territory_Sector__c</fullName>
        <description>This field stores the data of Territory Sector</description>
        <label>Account Territory Sector</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Territory_Type__c</fullName>
        <description>This field stores the data of Territory Type</description>
        <label>Account Territory Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Warning_Icon__c</fullName>
        <formula>CASE(Account_Warning__c, 
&quot;&quot;, &quot;&quot;,IMAGE ( &quot;/img/msg_icons/warning32.png&quot;, &quot;True Image&quot; ))</formula>
        <label>Account Warning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Warning__c</fullName>
        <label>Account Warning</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Hold</fullName>
                </value>
                <value>
                    <fullName>Suspicious - License Use</fullName>
                </value>
                <value>
                    <fullName>Suspicious - Business Practice</fullName>
                </value>
                <value>
                    <fullName>Restricted - License Use</fullName>
                </value>
                <value>
                    <fullName>Restricted - Trials &amp; Sales</fullName>
                </value>
                <value>
                    <fullName>Restricted - Legal</fullName>
                </value>
                <value>
                    <fullName>Export Compliance Concern</fullName>
                </value>
                <value>
                    <fullName>Non-Authorized Reseller</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_Changed_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Date/Time field for storing the last time an element of the address was updated; will be set by trigger; not added to page layouts</description>
        <label>Address Changed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bypass_Fuzzy_Matching__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Static flag to be used during lead conversion process to bypass fuzzy matching in DupeBlocker</description>
        <label>Bypass Fuzzy Matching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CDS_Account_Id__c</fullName>
        <description>The ID of the Account in CDS Database and will be used for integration</description>
        <externalId>true</externalId>
        <inlineHelpText>The ID of the Account in CDS Database</inlineHelpText>
        <label>CDS Account Id</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Child_Accounts__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of the child accounts associated with the CPN Account</description>
        <label>Child Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Controlled_Technology_Alert__c</fullName>
        <description>Used by TS or CS group , not display on UI</description>
        <label>Controlled Technology Alert</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unassigned</fullName>
                    <default>true</default>
                    <label>Unassigned</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Nuclear End Use</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corp_Parent_Name_SF_ID__c</fullName>
        <description>New field will be used for the reporting purpose to populate CPN Account id on both child record and CPN Account</description>
        <formula>IF( Is_Corporate_Parent__c , CASESAFEID(Id)   , IF( NOT(ISNULL(Corporate_Parent_Name__c)) , CASESAFEID(Corporate_Parent_Name__r.Id)  , &apos;&apos;)  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corporate Parent Name Salesforce ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Parent_CDS_ID__c</fullName>
        <description>Formula Corporate parent cds account id used for CPN account management</description>
        <formula>Corporate_Parent_Name__r.CDS_Account_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>CPN Account CDS ID</inlineHelpText>
        <label>Corporate Parent CDS ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Parent_Name_Latin__c</fullName>
        <formula>Corporate_Parent_Name__r.Account_Name_Latin__c</formula>
        <label>Corporate Parent Name (Latin)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Parent_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the Corporate Parent</description>
        <label>Corporate Parent Name</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <errorMessage>The entered Account is not a CPN Account</errorMessage>
            <filterItems>
                <field>Account.Is_Corporate_Parent__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CPN Child Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corporate_Parent_Name_for_Reports__c</fullName>
        <description>Corporate Parent Name for Reports</description>
        <formula>IF( Is_Corporate_Parent__c , Name , IF( NOT(ISNULL(Corporate_Parent_Name__c)) ,Corporate_Parent_Name__r.Name , &apos;&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corporate Parent Name for Reports</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Parent_Siebel_Account_ID__c</fullName>
        <formula>Corporate_Parent_Name__r.Siebel_Account_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corporate Parent Siebel Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_State_Code__c</fullName>
        <description>Concatenated State &amp; Country Codes - used by CDS integration for matching.</description>
        <formula>IF(OR (TEXT(BillingCountryCode) =&apos;US&apos;, TEXT(BillingCountryCode)=&apos;CA&apos;),TEXT(BillingStateCode), 
   IF(ISBLANK(BillingState),&apos;&apos;,TEXT(BillingCountryCode)&amp;&apos;-&apos;&amp; TEXT(BillingStateCode)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country State Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County (Local)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Denied_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box field updated by users</description>
        <label>Denied Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Denied_Prohibited_Account__c</fullName>
        <description>Calculated value display image on UI if account Prohibited flag OR Company Denied flag is True</description>
        <formula>IF (Denied_Company__c = TRUE , 
IMAGE ( &quot;/img/msg_icons/error32.png&quot;, &quot;True Image&quot; ), &quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Denied Account/On Watch List</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disable_Cleansing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Cleansing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Merge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Export_Prohibited__c</fullName>
        <formula>IF( Export_Status__c  = &quot;A&quot;,IMAGE ( &quot;/img/msg_icons/error32.png&quot;, &quot;True Image&quot; ), &quot;&quot;)</formula>
        <label>Export Prohibited</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Export_Status__c</fullName>
        <description>Valid values are A,C,and D. Field will be used by formula field Export Prohibited to expose red flag icon when vaue equal A. Not UI Field</description>
        <label>Export Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Region__c</fullName>
        <label>Global Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduate_Biological_Life_Sciences__c</fullName>
        <label>Graduate Biological &amp; Life Sciences</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Graduate_Business_and_Economics__c</fullName>
        <label>Graduate Business and Economics</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Graduate_Engineering__c</fullName>
        <label>Graduate Engineering</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Graduate_Mathematics__c</fullName>
        <label>Graduate Mathematics</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Graduate_Physical_Sciences__c</fullName>
        <label>Graduate Physical Sciences</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Headcount_Source_ID__c</fullName>
        <description>Unique identifier assigned to an account by the external data provider of VTTH/TTH data - i.e. IPEDS</description>
        <externalId>true</externalId>
        <label>Headcount Source ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Industry_Vetted_Date__c</fullName>
        <description>The date when the Account Industry Date was set by the authorized users</description>
        <label>Industry Vetted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Industry_Vetted_Login__c</fullName>
        <description>Login name of the user who vetted account industry</description>
        <label>Industry Vetted Login</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsAddress_Changed__c</fullName>
        <description>Checkbox formula field returning whether the address has changed during the last DML operation as determined by the following: 
	if the transaction was an insert, return true
	if the transaction was an update, check if the Address 			Changed Date/Time = Last Modified Date Time, if 	yes then return true, else return false;
not added to page layouts</description>
        <formula>IF(LastModifiedDate-Address_Changed_Date__c &lt;=  $Setup.General_Settings__c.CDS_IsChanged_Interval__c ,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsAddress Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Corporate_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Corporate Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Individual_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The flag is set to true if the account is created as dummy account for the private contacts</description>
        <label>Is Individual Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kept_Account_Location__c</fullName>
        <formula>Kept_Account_Name__r.Site</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kept Account Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kept_Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Kept Account Id</description>
        <label>Kept Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Duplicate_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Kept_Account_Siebel_Id__c</fullName>
        <formula>Kept_Account_Name__r.Siebel_Account_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kept Account Siebel ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Account__c</fullName>
        <inlineHelpText>Please contact Sales Operations to make a change to this field</inlineHelpText>
        <label>Key Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMER COM Target Account</fullName>
                </value>
                <value>
                    <fullName>Top 300 University</fullName>
                </value>
                <value>
                    <fullName>Tier 1 - Top WW</fullName>
                </value>
                <value>
                    <fullName>Tier 1A - Local Priority</fullName>
                </value>
                <value>
                    <fullName>Tier 2 - Non-Priority Large</fullName>
                </value>
                <value>
                    <fullName>Tier 3 - Non-Priority Small</fullName>
                </value>
                <value>
                    <fullName>Tier 3A - Non-Technical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link_to_Account__c</fullName>
        <formula>$Label.Console_URL</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Territory_ID__c</fullName>
        <description>Logical unique identifier for a Territory - used as key between systems (Salesforce, CDS, Warehouse, etc.)
Used to lookup Territory2Id for creating assignments to Territory</description>
        <label>Master Territory ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_degree_granting_Educational_NDE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non degree granting Educational (NDE)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Office_Channel__c</fullName>
        <label>Office Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Group__c</fullName>
        <label>Office Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <label>Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optional_Data_Missing__c</fullName>
        <formula>IF (( Record_Completeness_Percent__c &lt; 1) 
,
IF( ISBLANK( Account_Name_Latin__c ) , &quot; Account Name (Latin)&quot;, &quot;&quot;) + 
IF( ISBLANK( Account_City_Latin__c ) , &quot; City (Latin)&quot;, &quot;&quot;)
,&quot;&quot;)</formula>
        <label>Optional Data Missing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Latin_Name__c</fullName>
        <formula>Parent.Account_Name_Latin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Account Hierarchy (Latin)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Position_ID__c</fullName>
        <description>Siebel Account Primary Sales Rep&apos;s Position ID</description>
        <label>Primary Sales Rep</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Completeness_Percent__c</fullName>
        <description>If the Account Country is China, Japan or Korea THEN we want to know if the following fields are not populated: 
Latin Account Name 
Latin City</description>
        <formula>IF(OR (ISPICKVAL (BillingCountryCode, &quot;CN&quot;),
 ISPICKVAL(BillingCountryCode, &quot;JP&quot;),
 ISPICKVAL(BillingCountryCode, &quot;KR&quot;)), (IF( ISBLANK(Account_Name_Latin__c) , 0, 1) +  IF( ISBLANK( Account_City_Latin__c ) , 0, 1))  / 2, 1)</formula>
        <label>Record Completeness %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Record_Completeness__c</fullName>
        <description>Displays the icon if any optional fields are NULL, visible to all users</description>
        <formula>CASE(Record_Completeness_Percent__c, 
1, &quot;&quot;,IMAGE ( &quot;/img/msg_icons/info32.png&quot;, &quot;True Image&quot; ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This record has been saved without optional but important data, see the Optional Data Missing field for details. If available, add the missing data in order to improve the quality.</inlineHelpText>
        <label>Record Completeness</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Hierarchy__c</fullName>
        <formula>HYPERLINK(&apos;acc/account_hierarchy.jsp?id=&apos;+Id, &apos;View Sales Hierarchy&apos;,&apos;_blank&apos;)</formula>
        <label>Sales Hierarchy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Account_ID__c</fullName>
        <description>Full 18 character Salesforce ID of the Account - to be used for testing integrations.</description>
        <formula>CASESAFEID(Id)</formula>
        <label>Salesforce Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Territory_Id__c</fullName>
        <description>Salesforce territory Id</description>
        <label>Salesforce Territory Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Account_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Current Siebel Account Id</description>
        <externalId>true</externalId>
        <inlineHelpText>Siebel Account Id</inlineHelpText>
        <label>Siebel Account ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Siebel_Territory_ID__c</fullName>
        <description>Territory ID from external rules engine (Siebel).  Used to lookup the internal Salesforce Territory to assign to the Account.</description>
        <label>Siebel Territory ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Table__c</fullName>
        <description>Text formula field returning static value of “Account”; not added to page layouts</description>
        <formula>&apos;Account&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Text formula field returning static value of “Account”; not added to page layouts</inlineHelpText>
        <label>Source Table</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suspicious_or_Restricted__c</fullName>
        <formula>IF(( NOT ISPICKVAL(Account_Warning__c , &quot;&quot;)  &amp;&amp;    Export_Status__c &lt;&gt;&quot;A&quot; &amp;&amp;  Denied_Company__c = FALSE),IMAGE ( &quot;/img/samples/flag_red.gif&quot;, &quot;True Image&quot; ), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suspicious or Restricted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TA_Attempts__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of attempts made to run the territory assignment on the account</description>
        <inlineHelpText>Number of attempts made to run the territory assignment on the account.</inlineHelpText>
        <label>TA_Attempts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Territory_Industry__c</fullName>
        <label>Territory Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Name__c</fullName>
        <description>Internal Salesforce Territory Name.  Populated by looking up the Salesforce Territory Name through the External_Territory_ID__c field.</description>
        <label>Territory Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Sales_Group__c</fullName>
        <label>Territory Sales Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Sales_Team_Type__c</fullName>
        <label>Territory Sales Team Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <description>Hyperlink formula to the sales roster page</description>
        <formula>IF(
    Is_Individual_Account__c
    ,&quot;N/A&quot;
    ,IF(
        NOT(ISBLANK(Salesforce_Territory_Id__c))
        ,HYPERLINK(&quot;/apex/viewterritoryteams?territoryId=&quot;&amp; Salesforce_Territory_Id__c , Territory_Name__c)
        ,IF(
            AND(
                OR(
					AND(
						$Setup.Territory_Settings__c.Territory_Assignment_Lookup_Field__c == &quot;Siebel&quot;
						,NOT(ISBLANK(Siebel_Territory_ID__c))  
						,Siebel_Territory_ID__c != &apos;0-5220&apos; 
					)
					,AND(
						$Setup.Territory_Settings__c.Territory_Assignment_Lookup_Field__c == &quot;Master&quot;
						,NOT(ISBLANK(Master_Territory_ID__c))  
					)				
				)				
                ,ISBLANK(Salesforce_Territory_Id__c)
                ,OR(
                    TA_Attempts__c == 0
                    ,ISBLANK(TA_Attempts__c)
                )                
            )
            ,&quot;Assignment Error&quot;
            ,IF(
                AND(
                    OR(
						AND(
							$Setup.Territory_Settings__c.Territory_Assignment_Lookup_Field__c == &quot;Siebel&quot;
							,NOT(ISBLANK(Siebel_Territory_ID__c))  
							,Siebel_Territory_ID__c != &apos;0-5220&apos;  
						)
						,AND(
							$Setup.Territory_Settings__c.Territory_Assignment_Lookup_Field__c == &quot;Master&quot;
							,NOT(ISBLANK(Master_Territory_ID__c))  
						)				
					)	
                    ,ISBLANK(Salesforce_Territory_Id__c)
                    ,TA_Attempts__c &gt; 0
                    ,TA_Attempts__c &lt;= $Setup.Territory_Settings__c.Max_TA_Attempts__c
                )
                ,&quot;Pending Assignment - Retry&quot;
                ,IF(
                    AND(
                        OR(
							AND(
								$Setup.Territory_Settings__c.Territory_Assignment_Lookup_Field__c == &quot;Siebel&quot;
								,NOT(ISBLANK(Siebel_Territory_ID__c))  
								,Siebel_Territory_ID__c != &apos;0-5220&apos;  
							)
							,AND(
								$Setup.Territory_Settings__c.Territory_Assignment_Lookup_Field__c == &quot;Master&quot;
								,NOT(ISBLANK(Master_Territory_ID__c))  
							)				
						)	
                        ,ISBLANK(Salesforce_Territory_Id__c)
                        ,TA_Attempts__c &gt; $Setup.Territory_Settings__c.Max_TA_Attempts__c
                    )
                    ,&quot;Pending Assignment - Threshold Exceeded&quot;
                    ,&quot;Pending Assignment&quot;                             
                )
            )
        )
    )
)</formula>
        <label>Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Technical_Headcount_TTH__c</fullName>
        <formula>Graduate_Biological_Life_Sciences__c + Graduate_Business_and_Economics__c + Graduate_Engineering__c + Graduate_Mathematics__c + Graduate_Physical_Sciences__c + Undergraduate_Biological_Life_Sciences__c + Undergraduate_Business_and_Economics__c + Undergraduate_Engineering__c + Undergraduate_Mathematics__c + Undergraduate_Physical_Sciences__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Technical Headcount(TTH)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Undergraduate_Biological_Life_Sciences__c</fullName>
        <label>Undergraduate Biological &amp; Life Sciences</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Undergraduate_Business_and_Economics__c</fullName>
        <label>Undergraduate Business and Economics</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Undergraduate_Engineering__c</fullName>
        <label>Undergraduate Engineering</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Undergraduate_Mathematics__c</fullName>
        <label>Undergraduate Mathematics</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Undergraduate_Physical_Sciences__c</fullName>
        <label>Undergraduate Physical Sciences</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Virtual_Total_Technical_Headcount_VTTH__c</fullName>
        <formula>Graduate_Engineering__c +  Undergraduate_Engineering__c + 0.5*( Undergraduate_Biological_Life_Sciences__c + Undergraduate_Mathematics__c + Undergraduate_Physical_Sciences__c + Graduate_Biological_Life_Sciences__c + Graduate_Mathematics__c + Graduate_Physical_Sciences__c ) + 0.2*( Undergraduate_Business_and_Economics__c + Graduate_Business_and_Economics__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Virtual Total Technical Headcount(VTTH)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Virtual_Total_Technical_Headcount__c</fullName>
        <description>Virtual Total Technical Headcount (VTTH).  This field is read only for most users</description>
        <inlineHelpText>Virtual Total Technical Headcount (VTTH)</inlineHelpText>
        <label>Virtual Total Technical Headcount (VTTH)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volume_License_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Volume License Plan (VLP)</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>